# connected-spaces-platform-unity

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-android.yml  build-desktop.yml  build-ios.yml  run-unity-tests-macos.yml  run-unity-tests-windows.yml
InteropTestsXUnit/: OptionalTest.cs  PropertiesTests.cs  StaticTests.cs
UnityProject/CspUnityTests/Assets/Scripts/: CspUnityTests.asmdef
UnityProject/CspUnityTests/Assets/Scripts/UnitTests/: VectorTests.cs
cmake/: InstallToUnityProject.cmake  Options.cmake
interface/: main.i
interface/CSP/Common/: Vector.i
interface/swigutils/: OptionalDeclarations.i  TemplateDeclarations.i
interface/swigutils/typemaps/: Csp_Optional.i
